--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
-	<title>CodePen - Small Service Business Site Template</title>
+	<title>Launched! - Home</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initia-scale=1.0">
-	<title>Sm Srv Biz Site Tmplt</title>
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"> -->
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/site.webmanifest">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Antonio&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/d8de664714.js" crossorigin="anonymous"></script>
@@ -76,9 +74,9 @@
 			</div>
 		</nav>
 		<div class="nameNLogoBar">
-			<span class="siteName">Company Name</span>
-			<img class="ourCoLogo" src="https://assets.codepen.io/4378867/brightColorGearsCircle.svg" />
-			<h1>Page Title</h1>
+			<span class="siteName">Launched!</span>
+			<img class="ourCoLogo" src="img/launchedLogo.svg" />
+			<h1>Home</h1>
 		</div>
 		<!-- <div class="themeObjectImgBox">
 			<img class="themeObjectImg" src="https://assets.codepen.io/4378867/networkCablesTransparent.png" />
@@ -88,14 +86,15 @@
 		<section class="vertSctn">
 		</section>
 		<section class="tagBlurbSctn">
-			<div class="tagRow">
+			<!-- <div class="tagRow">
 				<i class="fas fa-flag-checkered"></i>
-				<h2 class="tagline">This is our company tagline.</h2>
-			</div>
-			<p class="mainBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-				incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus
-				commodo. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. At
-				tellus at urna condimentum mattis pellentesque id nibh tortor.</p>
+				
+			</div> -->
+			<h2 class="tagline">Get Launched!</h2>
+			<p class="mainBlurb">Is your small business ready for liftoff?</p>
+			<p>Launched! helps small businesses build an online presence with hosted, custom websites, ecommerce, branding, marketing
+			and social media setup. We give you the tools and services you need to take your mom-and-pop to the moon.</p>
+			<!-- <p>Get Launched!</p> -->
 		</section>
 		<section class="workExSctn">
 			<h2 class="pagePartTitle">Work Examples</h2>
@@ -149,15 +148,9 @@
 				<a href="contact.html" active>Contact</a>
 			</li>
 		</ul>
-		<p>Copyright &copy; 2021 by Company Name</p>
+		<p>Copyright &copy; 2021 by Launched!</p>
 		<p>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
 				href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
 	</footer>
 </body>
-
-</html>
-<!-- partial -->
-
-</body>
-
 </html>
