Change logo still hate colors

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		</nav>
 		<div class="nameNLogoBar">
 			<span class="siteName">Launched!</span>
-			<img class="ourCoLogo" src="img/launchedLogo.svg" />
+			<img class="ourCoLogo" src="img/LaunchedLogoB.svg" />
 			<h1>Home</h1>
 		</div>
 		<!-- <div class="themeObjectImgBox">
