New logo, colors and fonts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<link rel="manifest" href="img/favicon/site.webmanifest">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Antonio&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
 	<script src="https://kit.fontawesome.com/d8de664714.js" crossorigin="anonymous"></script>
 </head>
 
@@ -23,7 +26,7 @@
 			<div class="navDiv">
 				<h2 class="pagePartTitle hiddenHeaders">Navigation</h2>
 				<ul class="navLinkList topNavList">
-					<li class="navLi">
+					<li class="navLi currentTab">
 						<a href="index.html" active>
 							<i class="fas fa-home"></i>&nbsp;Home
 						</a>
@@ -74,27 +77,19 @@
 			</div>
 		</nav>
 		<div class="nameNLogoBar">
-			<span class="siteName">Launched!</span>
-			<img class="ourCoLogo" src="img/launchedLogo.svg" />
+			<span class="siteName hiddenHeaders">Launched!</span>
+			<img class="ourCoLogo" src="img/LaunchedLogoRGB.svg" />
 			<h1>Home</h1>
 		</div>
-		<!-- <div class="themeObjectImgBox">
-			<img class="themeObjectImg" src="https://assets.codepen.io/4378867/networkCablesTransparent.png" />
-		</div> -->
 	</header>
 	<main>
 		<section class="vertSctn">
 		</section>
 		<section class="tagBlurbSctn">
-			<!-- <div class="tagRow">
-				<i class="fas fa-flag-checkered"></i>
-				
-			</div> -->
-			<h2 class="tagline">Get Launched!</h2>
-			<p class="mainBlurb">Is your small business ready for liftoff?</p>
-			<p>Launched! helps small businesses build an online presence with hosted, custom websites, ecommerce, branding, marketing
-			and social media setup. We give you the tools and services you need to take your mom-and-pop to the moon.</p>
-			<!-- <p>Get Launched!</p> -->
+		<h2 class="tagline">Get Launched!</h2>
+		<p class="mainBlurb">Is your small business ready for liftoff?</p>
+		<p>Launched! helps small businesses build an online presence with hosted, custom websites, ecommerce, branding, marketing
+		and social media setup. We give you the tools and services you need to take your mom-and-pop to the moon.</p>
 		</section>
 		<section class="workExSctn">
 			<h2 class="pagePartTitle">Work Examples</h2>
