framework for site

--- a/indexB.html
+++ b/indexB.html
@@ -6,7 +6,7 @@
     <ul>
       <a href="index.html">
         <li>
-          <i class="">
+          <i class="">Home Icon
           Home / Services
         </li>
       </a>
@@ -18,12 +18,20 @@
     </ul>
   </nav>
   <div class="socialMediaBar">
-    <h1 class="hiddenHeader">Connect With Us on Social Media</h1>
+    <h1 class="hiddenHeaders">Connect With Us on Social Media</h1>
     <ul>
-      
+      <a href="https://youtube.com"><li><i class="">YouTube Logo</li></a>
+      <a href="https://google.com"><li><i class="">Google Logo</li></a>
+      <a href="https://instagram.com"><li><i class="">Instagram Logo</li></a>
+      <a href="https://facebook.com"><li><i class="">Facebook Logo</li></a>
+      <a href="https://yelp.com"><li><i class="">Yelp Logo</li></a>
+      <a href="https://craigslist.com"><li><i class="">Craigslist Logo</li></a>
+      <a href="https://pinterest.com"><li><i class="">Pinterest Logo</li></a>
+      <a href="https://behance.com"><li><i class="">BeHance Icon</li></a>
+      <a href="https://reddit.com"><li><i class="">Reddit Icon</li></a>
     </ul>
   </div>
-  <img class="ourCoLogo" src="img/LaunchedLogoRGB.svg" />
+  <img class="ourCoLogo" src="img/LaunchedLogoRGB.svg" alt="Launched! Logo"/>
   <span class="pgName">Home / Services</span>
 </header>
 <main>
@@ -38,41 +46,101 @@
   </a>
 </section>
 <section class="homeServicesSctn">
-Our Services
-Web Hosting
-<web server icon>
-[big plus sign] +
-[tapping img flips card with more info on service]
-[backside]
-Find your place on the web!
-Your site at your domain without having to worry about hardware and maintenance.
-We currently host through AWS which guarantees uptime and connection speed.
-
-[new line]
-
-Custom Websites
-<website icon>
-<example website screens img>
-[tapping img flips card with more info on service]
-[backside]
-Stand out with a custom website!
-We provide sites built-to-order with every detail crafted to convey your unique brand while still looking modern and professional.
-
-Brand Kits
-<brand kit icon (?)>
-<logo design & brand kit img>
-[tapping img flips card with more info on service]
-[backside]
-First impressions matter!
-We design vector logos that stand out, convey meaning, scale and look great on screen or in print.
-We pair logos, typefaces and color schemes to create a consistent look and feel across your entire online presence.
-
-E-Commerce
-<E-Commerce icon>
-<E-Commerce img>
-Reach more customers!
-Online shopping is more popular than ever. We can help you set up shops that reach a broader market.
-
+<h1>Our Services</h1>
+<ul>
+  <li>
+    <h2>Web Hosting</h2>
+    <div class="flipCardFront webHostingCard">
+      <!--web hosting image as background-->
+      <img src="img/webHostingIcon.svg" alt="Web Hosting Icon">
+      <div class="cardDetails button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+      <!--tapping flips card with more info on service on back-->
+    </div>
+    <div class="flipCardBack webHostingCard">
+      <!--web hosting image as background-->
+      <p class="serviceTagline">Find your place on the web!</p>
+      <ul class="serviceBullets">
+        <li>Your site at your domain without having to worry about hardware and maintenance.</li>
+        <li>
+          <span class="liWIcon">We currently host through AWS which guarantees uptime and connection speed.
+          <a href="https://aws.com"><i class="">AWS Logo</a>
+        </li>
+      </ul>
+      <a href="pricing.html"><div class="learnMore button">Learn More</div></a>
+      <div class="cardFront button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+    </div>
+  </li>
+  <li>
+    <h2>Custom Websites</h2>
+    <div class="flipCardFront customWebsiteCard">
+      <!--custom website image as background-->
+      <img src="img/customWebsiteIcon.svg" alt="Custom Website Icon">
+      <div class="cardDetails button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+      <!--tapping flips card with more info on service on back-->
+    </div>
+    <div class="flipCardBack customWebsiteCard">
+      <!--custom website image as background-->
+      <p class="serviceTagline">Stand out with a custom website!</p>
+      <ul class="serviceBullets">
+        <li>We provide sites built-to-order with every detail crafted to convey your unique brand while still looking modern and professional.</li>
+      </ul>
+      <a href="pricing.html"><div class="learnMore button">Learn More</div></a>
+      <div class="cardFront button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+    </div>
+  </li>
+  <li>
+    <h2>Brand Kits</h2>
+    <div class="flipCardFront brandKitCard">
+      <!---brand kit image as background-->
+      <img src="img/brandKitIcon.svg" alt="Brand Kit Icon">
+      <div class="cardDetails button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+      <!--tapping flips card with more info on service on back-->
+    </div>
+    <div class="flipCardBack brandKitCard">
+      <!--brand kit image as background-->
+      <p class="serviceTagline">First impressions matter!</p>
+      <ul class="serviceBullets">
+        <li>We design vector logos that stand out, convey meaning, scale and look great on screen or in print.</li>
+        <li>We pair logos, typefaces and color schemes to create a consistent look and feel across your entire online presence.</li>
+      </ul>
+      <a href="pricing.html"><div class="learnMore button">Learn More</div></a>
+      <div class="cardFront button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+    </div>
+  </li>
+  <li>
+    <h2>E-Commerce</h2>
+    <div class="flipCardFront ecommerceCard">
+      <!---e-commerce image as background-->
+      <img src="img/eCommerceIcon.svg" alt="E-Commerce Icon">
+      <div class="cardDetails button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+      <!--tapping flips card with more info on service on back-->
+    </div>
+    <div class="flipCardBack ecommerceCard">
+      <!--e-commerce image as background-->
+      <p class="serviceTagline">Reach more customers!</p>
+      <ul class="serviceBullets">
+        <li>Online shopping is more popular than ever. We can help you set up shops that reach a broader market.</li>
+      </ul>
+      <a href="pricing.html"><div class="learnMore button">Learn More</div></a>
+      <div class="cardFront button">
+        <div class="turningCardIcon">Turning Card Icon</div>
+      </div>
+    </div>
+  </li>
 Social Media
 <Social Media icon>
 <Social Media img>
